Created Book Card Generation

--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 </head>
 <body>
     <div class='card-grid'>
-        <div class='book-card'>
+        <!-- <div class='book-card'>
             <div class='book-info'>
                 <div class='book-title'>Sample Book</div>
                 <div class='book-author'>Sample Author</div>
-                <div class='num-pages'>123 Pages</div>
-                <div class='read-status'>Read</div>
-            </div>
+                <div class='book-numOfPages'>123 Pages</div>
+                <div class='book-read'>Read</div>
+            </div> -->
         </div>
-        <div class='book-card'></div>
-        <div class='book-card'></div>
     </div>
     <script src='script.js'></script>
 </body>
