Fixed Adding Books Error and Added Change Read Status Button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <label class='form book-title-text' for='Book Title'>Book Title</label><br>
                 <input id='add-book-title' type='text' class='input-field form book-title-text' required><br>
                 <label class='form book-author-text' for='Book Author'>Book Author</label><br>
-                <input id='add-book-author' type='text' class='input-field form book-author-text' required><br>
+                <input id='add-book-author' type='text' class='input-field form book-author-text'><br>
                 <label class='form' for='Number of Pages'>Number of Pages</label><br>
                 <input id='add-book-pages' type='number' class='input-field form' required><br>
                 <label class='form' for='Have Read'>Have you read this book?</label>
