Added Empty text and Changed animation styling

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <div class='card-grid'></div>
         </div>
         <div class='book-add'><img class='hvr-grow' src='images/add_circle_white_24dp.svg'></div>
+        <div class='empty-text-flex'>
+            <div id='empty-text'>Your Library is Empty! Click the + button to Add Books</div>
+        </div>
     </div>
     <div class='modal-flex'>
         <div class='add-book-modal'>
