Added Confirm Delete Button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         <div class='empty-text-flex'>
             <div id='empty-text'>Your Library is Empty! Click the + button to Add Books</div>
         </div>
+        <div class='delete-book-flex'>
+            <div id='delete-book-alert'>
+                <div id='delete-text'>Are you sure you want to delete this book?<br>(This Cannot be Undone!)</div>
+                <button class='confirm-buttons' id='delete-confirm'>Delete</button>
+                <button class='confirm-buttons' id='cancel-confirm'>Cancel</button>
+            </div>
+        </div>
     </div>
     <div class='modal-flex'>
         <div class='add-book-modal'>
